--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "coreMQTT"]
 	path = coreMQTT
 	url = https://github.com/FreeRTOS/coreMQTT.git
-[submodule "shadow"]
-	path = shadow
+[submodule "Device-Shadow-for-AWS-IoT-embedded-sdk"]
+	path = Device-Shadow-for-AWS-IoT-embedded-sdk
 	url = https://github.com/aws/Device-Shadow-for-AWS-IoT-embedded-sdk.git
